src/objects/Beacon__c.object
<CustomObject>
    <fields>
        <fullName>Identifier__c</fullName>
        <externalId>true</externalId>
        <label>Identifier</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Major__c</fullName>
        <label>Major</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Minor__c</fullName>
        <label>Minor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Uuid__c</fullName>
        <label>Uuid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Beacon</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>Beacon</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Beacons</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>